--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" window.location.href="https://nstrassburger.github.io/table_test_bd/">Zurück</a>
+                    <a class="nav-link" href="https://nstrassburger.github.io/table_test_bd/">Zurück</a>
                 </li>
             </ul>
         </div>
